// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Form/InputOTP Default smoke-test 1`] = `
<noscript>
</noscript>
<div data-input-otp-container="true"
     class="flex items-center gap-2 has-[:disabled]:opacity-50"
     style="position: relative; cursor: text; user-select: none; pointer-events: none; --root-height: 36px;"
>
  <div class="flex items-center">
    <div class="relative flex h-9 w-9 items-center justify-center border-input border-y border-r text-sm shadow-sm transition-all first:rounded-l-md first:border-l last:rounded-r-md">
    </div>
    <div class="relative flex h-9 w-9 items-center justify-center border-input border-y border-r text-sm shadow-sm transition-all first:rounded-l-md first:border-l last:rounded-r-md">
    </div>
    <div class="relative flex h-9 w-9 items-center justify-center border-input border-y border-r text-sm shadow-sm transition-all first:rounded-l-md first:border-l last:rounded-r-md">
    </div>
    <div class="relative flex h-9 w-9 items-center justify-center border-input border-y border-r text-sm shadow-sm transition-all first:rounded-l-md first:border-l last:rounded-r-md">
    </div>
    <div class="relative flex h-9 w-9 items-center justify-center border-input border-y border-r text-sm shadow-sm transition-all first:rounded-l-md first:border-l last:rounded-r-md">
    </div>
    <div class="relative flex h-9 w-9 items-center justify-center border-input border-y border-r text-sm shadow-sm transition-all first:rounded-l-md first:border-l last:rounded-r-md">
    </div>
  </div>
  <div style="position: absolute; inset: 0px; pointer-events: none;">
    <input autocomplete="one-time-code"
           class="disabled:cursor-not-allowed"
           data-input-otp="true"
           data-input-otp-placeholder-shown="true"
           inputmode="numeric"
           pattern="^[a-zA-Z0-9]+$"
           maxlength="6"
           value
           data-input-otp-mss="0"
           data-input-otp-mse="0"
           style="position: absolute; inset: 0px; width: 100%; height: 100%; display: flex; text-align: left; opacity: 1; color: transparent; pointer-events: all; background: transparent; caret-color: transparent; border: 0px solid transparent; outline: transparent solid 0px; box-shadow: none; line-height: 1; letter-spacing: -0.5em; font-size: var(--root-height); font-family: monospace; font-variant-numeric: tabular-nums;"
    >
  </div>
</div>
`;

exports[`Design System/Form/InputOTP SeparatedGroup smoke-test 1`] = `
<noscript>
</noscript>
<div data-input-otp-container="true"
     class="flex items-center gap-2 has-[:disabled]:opacity-50"
     style="position: relative; cursor: text; user-select: none; pointer-events: none; --root-height: 36px;"
>
  <div class="flex items-center">
    <div class="relative flex h-9 w-9 items-center justify-center border-input border-y border-r text-sm shadow-sm transition-all first:rounded-l-md first:border-l last:rounded-r-md">
    </div>
    <div class="relative flex h-9 w-9 items-center justify-center border-input border-y border-r text-sm shadow-sm transition-all first:rounded-l-md first:border-l last:rounded-r-md">
    </div>
    <div class="relative flex h-9 w-9 items-center justify-center border-input border-y border-r text-sm shadow-sm transition-all first:rounded-l-md first:border-l last:rounded-r-md">
    </div>
  </div>
  <div role="presentation">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="24"
         height="24"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-dot"
    >
      <circle cx="12.1"
              cy="12.1"
              r="1"
      >
      </circle>
    </svg>
  </div>
  <div class="flex items-center">
    <div class="relative flex h-9 w-9 items-center justify-center border-input border-y border-r text-sm shadow-sm transition-all first:rounded-l-md first:border-l last:rounded-r-md">
    </div>
    <div class="relative flex h-9 w-9 items-center justify-center border-input border-y border-r text-sm shadow-sm transition-all first:rounded-l-md first:border-l last:rounded-r-md">
    </div>
    <div class="relative flex h-9 w-9 items-center justify-center border-input border-y border-r text-sm shadow-sm transition-all first:rounded-l-md first:border-l last:rounded-r-md">
    </div>
  </div>
  <div style="position: absolute; inset: 0px; pointer-events: none;">
    <input autocomplete="one-time-code"
           class="disabled:cursor-not-allowed"
           data-input-otp="true"
           data-input-otp-placeholder-shown="true"
           inputmode="numeric"
           pattern="^[a-zA-Z0-9]+$"
           maxlength="6"
           value
           data-input-otp-mss="0"
           data-input-otp-mse="0"
           style="position: absolute; inset: 0px; width: 100%; height: 100%; display: flex; text-align: left; opacity: 1; color: transparent; pointer-events: all; background: transparent; caret-color: transparent; border: 0px solid transparent; outline: transparent solid 0px; box-shadow: none; line-height: 1; letter-spacing: -0.5em; font-size: var(--root-height); font-family: monospace; font-variant-numeric: tabular-nums;"
    >
  </div>
</div>
`;
